Fix start / select pressed alignment

--- a/snes/skin.css
+++ b/snes/skin.css
@@ -141,8 +141,8 @@ start and select buttons. */
     position: absolute;
     width: 176px;
     height: 62px;
-    top: 214px;
-    left: 358px;
+    top: 180px;
+    left: 348px;
 }
 /* Setting the size and CSS sprite for the start adn select buttons */
 .custom .back, .custom .start{
